--- a/week3/autograder/Dockerfile
+++ b/week3/autograder/Dockerfile
@@ -7,6 +7,9 @@ ADD source /autograder/source
 # Place run_autograder in parent directory so Gradescope can execute it
 RUN cp /autograder/source/run_autograder /autograder/run_autograder
 
+# Ensure that scripts are executable
+RUN chmod +x /autograder/run_autograder
+
 # Install Gradescope utilities for Python
 RUN pip3 install gradescope-utils
 
