--- a/week8/filterlab_ref/Cargo.toml
+++ b/week8/filterlab_ref/Cargo.toml
@@ -4,3 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+
+
+[dev-dependencies]
+criterion = "0.5"
+
+[[bench]]
+name = "filter_benchmark"
+harness = false
