--- a/week8/filterlab_ref/Cargo.toml
+++ b/week8/filterlab_ref/Cargo.toml
@@ -8,3 +8,11 @@ bitvec = "1.0"
 
 [dev-dependencies]
 criterion = "0.5"
+
+[[bench]]
+name = "read"
+harness = false
+
+[[bench]]
+name = "read_write"
+harness = false
