--- a/week8/filterlab_ref/Cargo.toml
+++ b/week8/filterlab_ref/Cargo.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bitvec = "1.0"
 
 [dev-dependencies]
 criterion = "0.5"
+fxhash = "0.2"
 
 [[bench]]
 name = "read"
