--- a/week12/rowlab_ref/Cargo.toml
+++ b/week12/rowlab_ref/Cargo.toml
@@ -2,10 +2,12 @@
 name = "rowlab_ref"
 version = "0.1.0"
 edition = "2024"
+default-run = "rowlab_ref"
 
 [dependencies]
 anyhow = "1.0.97"
 indicatif = "0.17.11"
+itertools = "0.14.0"
 rand = "0.9.0"
 rand_distr = "0.5.1"
 regex = "1.11.1"
