--- a/week12/rowlab/Cargo.toml
+++ b/week12/rowlab/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.97"
+indicatif = "0.17.11"
+itertools = "0.14.0"
+rand = "0.9.0"
+rand_distr = "0.5.1"
+regex = "1.11.1"
