--- a/week12/rowlab/Cargo.toml
+++ b/week12/rowlab/Cargo.toml
@@ -5,9 +5,8 @@ edition = "2024"
 default-run = "rowlab"
 
 [dependencies]
-anyhow = "1.0.97"
-indicatif = "0.17.11"
 itertools = "0.14.0"
 rand = "0.9.0"
 rand_distr = "0.5.1"
+rayon = "1.10.0"
 regex = "1.11.1"
