--- a/week12/rowlab_ref/Cargo.toml
+++ b/week12/rowlab_ref/Cargo.toml
@@ -10,3 +10,10 @@ rand = "0.9.0"
 rand_distr = "0.5.1"
 rayon = "1.10.0"
 regex = "1.11.1"
+
+[dev-dependencies]
+criterion = "0.5"
+
+[[bench]]
+name = "brc"
+harness = false
