--- a/week12/rowlab/Cargo.toml
+++ b/week12/rowlab/Cargo.toml
@@ -9,3 +9,10 @@ itertools = "0.14.0"
 rand = "0.9.0"
 rand_distr = "0.5.1"
 regex = "1.11.1"
+
+[dev-dependencies]
+criterion = "0.5"
+
+[[bench]]
+name = "brc"
+harness = false
