--- a/week10/filterlab_ref/Cargo.toml
+++ b/week10/filterlab_ref/Cargo.toml
@@ -3,12 +3,10 @@ name = "filterlab_ref"
 version = "0.1.0"
 edition = "2024"
 
-[dependencies]
-
 [dev-dependencies]
 criterion = "0.5"
-rand = "0.8"
-zipf = "7.0"
+rand = "0.9.2"
+rand_distr = "0.5.1"
 
 [[bench]]
 name = "read"
