--- a/week10/filterlab_ref_jess/Cargo.toml
+++ b/week10/filterlab_ref_jess/Cargo.toml
@@ -4,11 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+rand = "0.9.2"
+twox-hash = "2.1.2"
 
 [dev-dependencies]
 criterion = "0.5"
-rand = "0.8"
-zipf = "7.0"
+rand_distr = "0.5.1"
 
 [[bench]]
 name = "read"
